AUTO_FILES("." "src" "\\.(cpp|h)$")
if(MSVC_VERSION LESS 1600)
  AUTO_FILES("${ROOT_SOURCE_DIR}/msvc" "src" "\\.h$")
endif()
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
add_subdirectory("${ROOT_SOURCE_DIR}/dep/lzma457lib" lzma457lib)
AUTO_SOURCE_GROUP("src" "${sdw_lzma457lib_src}")
set(src "${src}" "${sdw_lzma457lib_src}")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/lz4/lib" "src" "\\.(c|h)$")
include_directories(${DEP_INCLUDE_DIR})
if(MSVC_VERSION LESS 1600)
  include_directories("${ROOT_SOURCE_DIR}/msvc")
endif()
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN)
if(UNIX OR MINGW)
  add_definitions("${sdw_lzma457lib_add_definitions_UNIX_OR_MINGW}")
endif()
if(APPLE)
  add_definitions(-DSDW_XCONVERT)
endif()
ADD_EXE(unitytool "${src}")
if(MSVC)
  if(MSVC_VERSION LESS 1910)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4503")
  endif()
endif()
if(APPLE OR CYGWIN)
  target_link_libraries(unitytool iconv)
endif()
install(TARGETS unitytool DESTINATION bin)
